# maturin_musl_fail

./: .gitignore  Cargo.toml  Justfile  pyproject.toml
.github/workflows/: CI.yml
python/maturin_musl_fail/: __init__.py  __init__.pyi
src/: lib.rs  rustything.rs
src/tests/: test_basic.py
tests/: test_jellyfish.py
