[package]
name = "maturin_musl_fail"
version = "0.0.1"


[package.metadata.maturin]
name = "maturin_musl_fail._rustything"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "maturin_musl_fail"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.18.1" # 0.18.2
unicode-segmentation = "^1.6.0"
unicode-normalization = "^0.1"
# tinyvec = "1.6.0"
# smallvec = "1.10.0"
# ahash = "0.8.3"


[features]
python = []
